--- a/Kernel/Output/HTML/Standard/AgentPassword.tt
+++ b/Kernel/Output/HTML/Standard/AgentPassword.tt
@@ -28,6 +28,10 @@
                     <input type="hidden" name="Subaction" value="Change"/>
                     <fieldset class="TableLike FixedLabel">
 
+                        <label>[% Translate("Current password") | html %]:</label>
+                        <div class="Field"><input type="password" name="CurPw" value="" size="12"/></div>
+                        <div class="Clear"></div>
+
                         <label>[% Translate("New password") | html %]:</label>
                         <div class="Field"><input type="password" name="NewPw" value="" size="12"/></div>
                         <div class="Clear"></div>
