--- a/Kernel/Output/HTML/Templates/Standard/AgentPassword.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AgentPassword.tt
@@ -13,7 +13,7 @@
 
         <div class="WidgetSimple">
             <div class="Header">
-                <h2>[% Translate("Your current password is older then %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</h2>
+                <h2>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</h2>
             </div>
             <div class="Content">
                 <p>
@@ -35,7 +35,7 @@
                         <div class="Field"><input type="password" name="NewPw" value="" size="12"/></div>
                         <div class="Clear"></div>
 
-                        <label>[% Translate("New password again") | html %]:</label>
+                        <label>[% Translate("Repeat new password") | html %]:</label>
                         <div class="Field"><input type="password" name="NewPw1" value="" size="12"/></div>
                         <div class="Clear"></div>
 
@@ -56,29 +56,29 @@
                 <p>
                     <ul>
 [% RenderBlockStart("PasswordMaxValidTimeInDays") %]
-                        <li>o [% Translate("Password need to be renewed every %s days.", Data.PasswordMaxValidTimeInDays) | html %]</li>
+                        <li>o [% Translate("Password needs to be renewed every %s days.", Data.PasswordMaxValidTimeInDays) | html %]</li>
 [% RenderBlockEnd("PasswordMaxValidTimeInDays") %]
 [% RenderBlockStart("PasswordHistory") %]
                         <li>o [% Translate("Password history is active, you can't use a password which was used the last %s times.", Data.PasswordHistory) | html %]</li>
 [% RenderBlockEnd("PasswordHistory") %]
 [% RenderBlockStart("PasswordMinSize") %]
-                        <li>o [% Translate("Password size is min. %s character.", Data.PasswordMinSize) | html %]</li>
+                        <li>o [% Translate("Password length must be at least %s characters.", Data.PasswordMinSize) | html %]</li>
 [% RenderBlockEnd("PasswordMinSize") %]
 [% RenderBlockStart("PasswordMin2Lower2UpperCharacters") %]
-                        <li>o [% Translate("Password required min. 2 lower and 2 upper character.") | html %]</li>
+                        <li>o [% Translate("Password requires at least two lower- and two uppercase characters.") | html %]</li>
 [% RenderBlockEnd("PasswordMin2Lower2UpperCharacters") %]
 [% RenderBlockStart("PasswordMin2Characters") %]
-                        <li>o [% Translate("Password required min. 2 character.") | html %]</li>
+                        <li>o [% Translate("Password requires at least two characters.") | html %]</li>
 [% RenderBlockEnd("PasswordMin2Characters") %]
 [% RenderBlockStart("PasswordNeedDigit") %]
-                        <li>o [% Translate("Password required min. 1 digit.") | html %]</li>
+                        <li>o [% Translate("Password requires at least one digit.") | html %]</li>
 [% RenderBlockEnd("PasswordNeedDigit") %]
                     </ul>
                 </p>
 [% RenderBlockStart("AdminConfig") %]
                 <br/>
                 <p>
-                    <a href="index.pl?Action=AdminSysConfig;Subaction=Edit;SysConfigSubGroup=Frontend::Agent::Password;SysConfigGroup=Framework::Password::Policy">[% Translate("Change Config Options") | html %]</a> <font color="red">(*[% Translate("Admin Permissions are required!") | html %])</font>
+                    <a href="index.pl?Action=AdminSysConfig;Subaction=Edit;SysConfigSubGroup=Frontend::Agent::Password;SysConfigGroup=Framework::Password::Policy">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
                 </p>
 [% RenderBlockEnd("AdminConfig") %]
             </div>
