--- a/Kernel/Output/HTML/Templates/Standard/AgentPassword.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AgentPassword.tt
@@ -20,7 +20,7 @@
                     <font color="red">[% Translate(Data.Error) | html %]</font>
                 </p>
 
-                <h3>[% Translate("Change Password") | html %]</h3>
+                <h3>[% Translate("Change password") | html %]</h3>
 
                 <form action="[% Env("CGIHandle") %]" method="post">
                     <input type="hidden" name="Action" value="[% Env("Action") %]"/>
@@ -78,7 +78,7 @@
 [% RenderBlockStart("AdminConfig") %]
                 <br/>
                 <p>
-                    <a href="index.pl?Action=AdminSysConfig;Subaction=Edit;SysConfigSubGroup=Frontend::Agent::Password;SysConfigGroup=Framework::Password::Policy">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
+                    <a href="index.pl?Action=AdminSystemConfiguration;Subaction=View;Setting=PreferencesGroups%23%23%23Password">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
                 </p>
 [% RenderBlockEnd("AdminConfig") %]
             </div>
