--- a/Kernel/Output/HTML/Templates/Standard/CustomerPassword.tt
+++ b/Kernel/Output/HTML/Templates/Standard/CustomerPassword.tt
@@ -82,7 +82,7 @@
 [% RenderBlockStart("AdminConfig") %]
                 <br/>
                 <p>
-                    <a href="index.pl?Action=AdminSysConfig;Subaction=Edit;SysConfigSubGroup=Frontend::Agent::Password;SysConfigGroup=Framework::Password::Policy">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
+                    <a href="index.pl?Action=AdminSystemConfiguration;Subaction=View;Setting=CustomerPreferencesGroups%23%23%23Password">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
                 </p>
 [% RenderBlockEnd("AdminConfig") %]
             </div>
