--- a/Kernel/Output/HTML/Templates/Standard/CustomerPassword.tt
+++ b/Kernel/Output/HTML/Templates/Standard/CustomerPassword.tt
@@ -1,5 +1,5 @@
 # --
-# Copyright (C) 2012-2020 Znuny GmbH, http://znuny.com/
+# Copyright (C) 2012-2021 Znuny GmbH, http://znuny.com/
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -17,14 +17,14 @@
 
         <div class="WidgetSimple">
             <div class="Header">
-                <h2>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</h2>
+                <h2>[% Translate("Change Password") | html %]</h2>
             </div>
             <div class="Content">
                 <p>
                     <font color="red">[% Translate(Data.Error) | html %]</font>
                 </p>
 
-                <h3>[% Translate("Change Password") | html %]</h3>
+                <h3>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</h3>
 
                 <form action="[% Env("CGIHandle") %]" method="post">
                     <input type="hidden" name="Action" value="[% Env("Action") %]"/>
@@ -32,16 +32,22 @@
                     <fieldset class="TableLike FixedLabel">
 
                         <label>[% Translate("Current password") | html %]:</label>
-                        <div class="Field"><input type="password" name="CurPw" value="" size="12"/></div>
+                        <div class="Field"><input type="password" id="CurPw" name="CurPw" value=""/></div>
                         <div class="Clear"></div>
 
                         <label>[% Translate("New password") | html %]:</label>
-                        <div class="Field"><input type="password" name="NewPw" value="" size="12"/></div>
+                        <div class="Field"><input type="password" id="NewPw" name="NewPw" value=""/></div>
                         <div class="Clear"></div>
 
-                        <label>[% Translate("Repeat new password") | html %]:</label>
-                        <div class="Field"><input type="password" name="NewPw1" value="" size="12"/></div>
+                        <label>[% Translate("Verify password") | html %]:</label>
+                        <div class="Field"><input type="password" id="NewPw1" name="NewPw1" value=""/></div>
                         <div class="Clear"></div>
+
+[% RenderBlockStart("TwoFactorToken") %]
+                        <label for="TwoFactorToken">[% Translate("2 Factor Token") | html %]</label>
+                        <div class="Field"><input type="text" id="TwoFactorToken" name="TwoFactorToken" value=""></div>
+                        <div class="Clear"></div>
+[% RenderBlockEnd("TwoFactorToken") %]
 
                     </fieldset>
 
