Updated customized Znuny files.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Widget.ZnunyPasswordPolicy.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Widget.ZnunyPasswordPolicy.css
@@ -3,7 +3,7 @@
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * --
- * $origin: https://github.com/OTRS/otrs/blob/be65d60b7254415e310823b768d158beab6c5f4a/var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
+ * $origin: otrs - be65d60b7254415e310823b768d158beab6c5f4a - var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
  * --
  */
 
