--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Widget.ZnunyPasswordPolicy.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Widget.ZnunyPasswordPolicy.css
@@ -1,3 +1,12 @@
+/*
+Copyright (C) 2001-2021 OTRS AG, https://otrs.com/
+Copyright (C) 2012-2022 Znuny GmbH, https://znuny.com/
+
+This software comes with ABSOLUTELY NO WARRANTY. For details, see
+the enclosed file COPYING for license information (GPL). If you
+did not receive this file, see https://www.gnu.org/licenses/gpl-3.0.txt.
+*/
+
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
  * @copyright   OTRS AG
@@ -7,7 +16,7 @@
  * --
  */
 
-/* nofilter(TidyAll::Plugin::OTRS::Common::Origin) */
+/* nofilter(TidyAll::Plugin::Znuny::Common::Origin) */
 
 /**
  * @package     Skin "Default"
