--- a/Kernel/Output/HTML/Templates/Standard/AgentPassword.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AgentPassword.tt
@@ -6,87 +6,104 @@
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 
-<div class="MainBox ARIARoleMain">
-    <h1>[% Translate("Password Policy") | html %]</h1>
-
-    <div class="ContentColumn">
-
-        <div class="WidgetSimple">
-            <div class="Header">
-                <h2>[% Translate("Change password") | html %]</h2>
-            </div>
-            <div class="Content">
-                <p>
-                    <font color="red">[% Translate(Data.Error) | html %]</font>
-                </p>
-
-                <h3>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</h3>
-
-                <form action="[% Env("CGIHandle") %]" method="post">
-                    <input type="hidden" name="Action" value="[% Env("Action") %]"/>
-                    <input type="hidden" name="Subaction" value="Change"/>
-                    <fieldset class="TableLike FixedLabel">
-
-                        <label>[% Translate("Current password") | html %]:</label>
-                        <div class="Field"><input type="password" id="CurPw" name="CurPw" value=""/></div>
-                        <div class="Clear"></div>
-
-                        <label>[% Translate("New password") | html %]:</label>
-                        <div class="Field"><input type="password" id="NewPw" name="NewPw" value=""/></div>
-                        <div class="Clear"></div>
-
-                        <label>[% Translate("Verify password") | html %]:</label>
-                        <div class="Field"><input type="password" id="NewPw1" name="NewPw1" value=""/></div>
-                        <div class="Clear"></div>
-
-[% RenderBlockStart("TwoFactorToken") %]
-                        <label for="TwoFactorToken">[% Translate("2 Factor Token") | html %]:</label>
-                        <div class="Field"><input type="text" id="TwoFactorToken" name="TwoFactorToken" value=""></div>
-                        <div class="Clear"></div>
-[% RenderBlockEnd("TwoFactorToken") %]
-
-                    </fieldset>
-
-                    <input class="button" type="submit" value="[% Translate("Update") | html %]"/>
-
-                </form>
-            </div>
-        </div>
-
+<div class="MainBox ARIARoleMain LayoutFixedSidebar SidebarFirst ActionsSideBar">
+    <div class="SidebarColumn ActionsSideBarComp">
         <div class="WidgetSimple">
             <div class="Header">
                 <h2>[% Translate("Password Policy") | html %]</h2>
             </div>
             <div class="Content">
-
-                <p>
-                    <ul>
 [% RenderBlockStart("PasswordMaxValidTimeInDays") %]
-                        <li>o [% Translate("Password needs to be renewed every %s days.", Data.PasswordMaxValidTimeInDays) | html %]</li>
+                <p>[% Translate("Password needs to be renewed every %s days.", Data.PasswordMaxValidTimeInDays) | html %]</p>
 [% RenderBlockEnd("PasswordMaxValidTimeInDays") %]
 [% RenderBlockStart("PasswordHistory") %]
-                        <li>o [% Translate("Password history is active, you can't use a password which was used the last %s times.", Data.PasswordHistory) | html %]</li>
+                <p>[% Translate("Password history is active, you can't use a password which was used the last %s times.", Data.PasswordHistory) | html %]</p>
 [% RenderBlockEnd("PasswordHistory") %]
 [% RenderBlockStart("PasswordMinSize") %]
-                        <li>o [% Translate("Password length must be at least %s characters.", Data.PasswordMinSize) | html %]</li>
+                <p>[% Translate("Password length must be at least %s characters.", Data.PasswordMinSize) | html %]</p>
 [% RenderBlockEnd("PasswordMinSize") %]
 [% RenderBlockStart("PasswordMin2Lower2UpperCharacters") %]
-                        <li>o [% Translate("Password requires at least two lower- and two uppercase characters.") | html %]</li>
+                <p>[% Translate("Password requires at least two lower- and two uppercase characters.") | html %]</p>
 [% RenderBlockEnd("PasswordMin2Lower2UpperCharacters") %]
 [% RenderBlockStart("PasswordMin2Characters") %]
-                        <li>o [% Translate("Password requires at least two characters.") | html %]</li>
+                <p>[% Translate("Password requires at least two characters.") | html %]</p>
 [% RenderBlockEnd("PasswordMin2Characters") %]
 [% RenderBlockStart("PasswordNeedDigit") %]
-                        <li>o [% Translate("Password requires at least one digit.") | html %]</li>
+                <p>[% Translate("Password requires at least one digit.") | html %]</p>
 [% RenderBlockEnd("PasswordNeedDigit") %]
-                    </ul>
-                </p>
+            </div>
+        </div>
 [% RenderBlockStart("AdminConfig") %]
-                <br/>
-                <p>
-                    <a href="index.pl?Action=AdminSystemConfiguration;Subaction=View;Setting=PreferencesGroups%23%23%23Password">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
-                </p>
+        <div class="WidgetSimple">
+            <div class="Header">
+                <h2>[% Translate("Related Actions") | html %]</h2>
+            </div>
+            <div class="Content">
+                <ul class="ActionList">
+                    <li>
+                        <a href="[% Env("Baselink") %]Action=AdminSystemConfiguration;Subaction=View;Setting=CustomerPreferencesGroups%23%23%23Password" class="CallForAction btn-main btn-primary-ghost"><span>[% Translate("System configuration") | html %]</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 [% RenderBlockEnd("AdminConfig") %]
+    </div>
+
+    <div class="ContentColumn">
+        <h1 class="InvisibleText">[% Translate("Change password") | html %]</h1>
+        <div class="WidgetSimple">
+            <div class="Header">
+                <h2>[% Translate("Change password") | html %]</h2>
+            </div>
+            <div class="Content">
+                <fieldset class="TableLike card-item-wrapper">
+                    [% IF Data.Error %]
+                        <p class="Error">[% Translate(Data.Error) | html %]</p>
+                    [% END %]
+
+                    <p>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</p>
+
+                    <form action="[% Env("CGIHandle") %]" method="post">
+                        <input type="hidden" name="Action" value="[% Env("Action") %]"/>
+                        <input type="hidden" name="Subaction" value="Change"/>
+
+                        <div class="field-wrapper">
+                            <label>[% Translate("Current password") | html %]</label>
+                            <div class="Field">
+                                <input type="password" id="CurPw" name="CurPw" value=""/>
+                            </div>
+                        </div>
+
+                        <div class="field-wrapper">
+                            <label>[% Translate("New password") | html %]</label>
+                            <div class="Field">
+                                <input type="password" id="NewPw" name="NewPw" value=""/>
+                            </div>
+                        </div>
+
+                        <div class="field-wrapper">
+                            <label>[% Translate("Verify password") | html %]</label>
+                            <div class="Field">
+                                <input type="password" id="NewPw1" name="NewPw1" value=""/>
+                            </div>
+                        </div>
+
+[% RenderBlockStart("TwoFactorToken") %]
+                        <div class="field-wrapper">
+                            <label for="TwoFactorToken">[% Translate("2 Factor Token") | html %]</label>
+                            <div class="Field">
+                                <input type="text" id="TwoFactorToken" name="TwoFactorToken" value="">
+                            </div>
+                        </div>
+[% RenderBlockEnd("TwoFactorToken") %]
+
+                        <div class="field-wrapper form-button-actions">
+                            <div class="Field buttons-field">
+                                <button class="CallForAction Primary btn-primary btn-main btn-width-md" id="Submit" type="submit" value="[% Translate("Update") | html %]"><span>[% Translate("Update") | html %]</span></button>
+                            </div>
+                        </div>
+                    </form>
+                </fieldset>
             </div>
         </div>
     </div>
