--- a/Kernel/Output/HTML/Templates/Standard/CustomerPassword.tt
+++ b/Kernel/Output/HTML/Templates/Standard/CustomerPassword.tt
@@ -5,92 +5,105 @@
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
-
-<div class="MainBox ARIARoleMain">
-    <div class="Content">
-        <div class="FAQHeader">
-            <h2 title="[% Translate("Password Policy") | html %]">
-                [% Translate("Password Policy") | html %]
-            </h2>
-            <div class="Clear"></div>
-        </div>
-
-        <div class="WidgetSimple">
-            <div class="Header">
-                <h2>[% Translate("Change Password") | html %]</h2>
-            </div>
-            <div class="Content">
-                <p>
-                    <font color="red">[% Translate(Data.Error) | html %]</font>
-                </p>
-
-                <h3>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</h3>
-
-                <form action="[% Env("CGIHandle") %]" method="post">
-                    <input type="hidden" name="Action" value="[% Env("Action") %]"/>
-                    <input type="hidden" name="Subaction" value="Change"/>
-                    <fieldset class="TableLike FixedLabel">
-
-                        <label>[% Translate("Current password") | html %]:</label>
-                        <div class="Field"><input type="password" id="CurPw" name="CurPw" value=""/></div>
-                        <div class="Clear"></div>
-
-                        <label>[% Translate("New password") | html %]:</label>
-                        <div class="Field"><input type="password" id="NewPw" name="NewPw" value=""/></div>
-                        <div class="Clear"></div>
-
-                        <label>[% Translate("Verify password") | html %]:</label>
-                        <div class="Field"><input type="password" id="NewPw1" name="NewPw1" value=""/></div>
-                        <div class="Clear"></div>
-
-[% RenderBlockStart("TwoFactorToken") %]
-                        <label for="TwoFactorToken">[% Translate("2 Factor Token") | html %]</label>
-                        <div class="Field"><input type="text" id="TwoFactorToken" name="TwoFactorToken" value=""></div>
-                        <div class="Clear"></div>
-[% RenderBlockEnd("TwoFactorToken") %]
-
-                    </fieldset>
-
-                    <input class="button" type="submit" value="[% Translate("Update") | html %]"/>
-
-                </form>
-            </div>
-        </div>
-
-        <div class="WidgetSimple">
-            <div class="Header">
-                <h2>[% Translate("Password Policy") | html %]</h2>
-            </div>
-            <div class="Content">
-
-                <p>
-                    <ul>
+<div id="MainBox" class="ARIARoleMain">
+    <div class="ContentWrapper flex-column">
+        <h1 class="PageTitle">[% Translate("Password Policy") | html %]</h1>
+        <div class="Content flex-center SidebarLast">
+            <div class="SidebarColumn">
+                <div class="WidgetSimple">
+                    <div class="Header">
+                        <h2>[% Translate("Password Policy") | html %]</h2>
+                    </div>
+                    <div class="Content">
 [% RenderBlockStart("PasswordMaxValidTimeInDays") %]
-                        <li>o [% Translate("Password needs to be renewed every %s days.", Data.PasswordMaxValidTimeInDays) | html %]</li>
+                        <p>[% Translate("Password needs to be renewed every %s days.", Data.PasswordMaxValidTimeInDays) | html %]</p>
 [% RenderBlockEnd("PasswordMaxValidTimeInDays") %]
 [% RenderBlockStart("PasswordHistory") %]
-                        <li>o [% Translate("Password history is active, you can't use a password which was used the last %s times.", Data.PasswordHistory) | html %]</li>
+                        <p>[% Translate("Password history is active, you can't use a password which was used the last %s times.", Data.PasswordHistory) | html %]</p>
 [% RenderBlockEnd("PasswordHistory") %]
 [% RenderBlockStart("PasswordMinSize") %]
-                        <li>o [% Translate("Password length must be at least %s characters.", Data.PasswordMinSize) | html %]</li>
+                        <p>[% Translate("Password length must be at least %s characters.", Data.PasswordMinSize) | html %]</p>
 [% RenderBlockEnd("PasswordMinSize") %]
 [% RenderBlockStart("PasswordMin2Lower2UpperCharacters") %]
-                        <li>o [% Translate("Password requires at least two lower- and two uppercase characters.") | html %]</li>
+                        <p>[% Translate("Password requires at least two lower- and two uppercase characters.") | html %]</p>
 [% RenderBlockEnd("PasswordMin2Lower2UpperCharacters") %]
 [% RenderBlockStart("PasswordMin2Characters") %]
-                        <li>o [% Translate("Password requires at least two characters.") | html %]</li>
+                        <p>[% Translate("Password requires at least two characters.") | html %]</p>
 [% RenderBlockEnd("PasswordMin2Characters") %]
 [% RenderBlockStart("PasswordNeedDigit") %]
-                        <li>o [% Translate("Password requires at least one digit.") | html %]</li>
+                        <p>[% Translate("Password requires at least one digit.") | html %]</p>
 [% RenderBlockEnd("PasswordNeedDigit") %]
-                    </ul>
-                </p>
+                    </div>
+                </div>
 [% RenderBlockStart("AdminConfig") %]
-                <br/>
-                <p>
-                    <a href="index.pl?Action=AdminSystemConfiguration;Subaction=View;Setting=CustomerPreferencesGroups%23%23%23Password">[% Translate("Change config options") | html %]</a> <font color="red">(*[% Translate("Admin permissions are required!") | html %])</font>
-                </p>
+                <div class="WidgetSimple">
+                    <div class="Header">
+                        <h2>[% Translate("Related Actions") | html %]</h2>
+                    </div>
+                    <div class="Content">
+                        <ul class="ActionList">
+                            <li>
+                                <a href="index.pl?Action=AdminSystemConfiguration;Subaction=View;Setting=CustomerPreferencesGroups%23%23%23Password" class="CallForAction btn-main btn-primary-ghost"><span>[% Translate("System configuration") | html %]</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 [% RenderBlockEnd("AdminConfig") %]
+            </div>
+            <div class="card ContentColumn">
+                <form class="flex-column flex-gap-20 padding-md" action="[% Env("CGIHandle") %]" method="post" name="compose">
+                    <input type="hidden" name="Action" value="[% Env("Action") %]"/>
+                    <input type="hidden" name="Subaction" value="Change"/>
+                    <div>
+                        <h2>[% Translate("Change password") | html %]</h2>
+                    </div>
+                    <div class="sections-wrapper">
+                        <fieldset class="section-block first">
+                            [% IF Data.Error %]
+                                <p class="Error">[% Translate(Data.Error) | html %]</p>
+                            [% END %]
+
+                            <p>[% Translate("Your current password is older than %s days. You need to set a new one.", Data.PasswordMaxValidTimeInDays) | html %]</p>
+
+                            <div class="active-inner-cols">
+                                <div class="field-wrapper">
+                                    <label>[% Translate("Current password") | html %]</label>
+                                    <div class="Field">
+                                        <input type="password" id="CurPw" name="CurPw" value=""/>
+                                    </div>
+                                </div>
+
+                                <div class="field-wrapper">
+                                    <label>[% Translate("New password") | html %]</label>
+                                    <div class="Field">
+                                        <input type="password" id="NewPw" name="NewPw" value=""/>
+                                    </div>
+                                </div>
+
+                                <div class="field-wrapper">
+                                    <label>[% Translate("Verify password") | html %]</label>
+                                    <div class="Field">
+                                        <input type="password" id="NewPw1" name="NewPw1" value=""/>
+                                    </div>
+                                </div>
+
+[% RenderBlockStart("TwoFactorToken") %]
+                                <div class="field-wrapper">
+                                    <label for="TwoFactorToken">[% Translate("2 Factor Token") | html %]</label>
+                                    <div class="Field">
+                                        <input type="text" id="TwoFactorToken" name="TwoFactorToken" value="">
+                                    </div>
+                                </div>
+[% RenderBlockEnd("TwoFactorToken") %]
+                            </div>
+                        </fieldset>
+                    </div>
+                    <div id="BottomActionRow" class="ActionRow field-wrapper form-button-actions ActionRow-full-width">
+                        <div class="Field buttons-field">
+                            <button class="CallForAction Primary btn-primary btn-main btn-width-md" id="Submit" type="submit" value="[% Translate("Update") | html %]"><span>[% Translate("Update") | html %]</span></button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
