--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Widget.Znuny4OTRSPasswordPolicy.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Widget.Znuny4OTRSPasswordPolicy.css
@@ -1,13 +1,22 @@
+/*
+Copyright (C) 2001-2021 OTRS AG, https://otrs.com/
+Copyright (C) 2012 Znuny GmbH, https://znuny.com/
+
+This software comes with ABSOLUTELY NO WARRANTY. For details, see
+the enclosed file COPYING for license information (GPL). If you
+did not receive this file, see https://www.gnu.org/licenses/gpl-3.0.txt.
+*/
+
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * --
- * $origin: https://github.com/OTRS/otrs/blob/be65d60b7254415e310823b768d158beab6c5f4a/var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
+ * $origin: otrs - be65d60b7254415e310823b768d158beab6c5f4a - var/httpd/htdocs/skins/Agent/default/css/Core.Widget.css
  * --
  */
 
-/* nofilter(TidyAll::Plugin::OTRS::Common::Origin) */
+/* nofilter(TidyAll::Plugin::Znuny::Common::Origin) */
 
 /**
  * @package     Skin "Default"
